# Monopoly

./: .clang-format  CMakeLists.txt  README.md
Monopoly/: Bankier.cpp  CMakeLists.txt  Contestant.h  FsmVariant.h  Monopoly.pro  MonopolyGame.cpp  MonopolyGame.h  PlayerPropertis.cpp  PlayerPropertis.h  StateVariant_kopia.h  bank.h  bankier.h  blackhole.cpp  board.cpp  board.h  cycliciterator.h  deposite.cpp  deposite.h  die.h  event.h  guest.h  main.cpp  monopolygame.cpp  monopolygame.h  penalty.cpp  penalty.h  piece.cpp  piece.h  player.cpp  player.h  playerStatus.cpp  playerStatus.h  printer.h  prison.cpp  prison.h  property.cpp  property.h  randomsquare.cpp  randomsquare.h  reward.cpp  (+9 more)
Monopoly/Actors/: Bank.h  Bankier.cpp  Bankier.h  CMakeLists.txt  Contestant.h  PlayerStatus.cpp  PlayerStatus.h
Monopoly/BuildingProperty/: BuildingMachine.h  BuildingObserver.h  BuildingProperty.cpp  BuildingProperty.h  BuildingPropertyFsm.cpp  BuildingPropertyFsm.h  CMakeLists.txt  EventVariant.h  HotelBuildingState.cpp  HotelBuildingState.h  HouseDevelop.h  MortgageBuildingState.cpp  MortgageBuildingState.h  StateVariant.h  SubjectBuildingProperty.cpp  SubjectBuildingProperty.h  allpropertisbuildingstate.cpp  allpropertisbuildingstate.h  buildingMachine.h  buildingproperty.cpp  buildingproperty.h  defultbuildingstate.cpp  defultbuildingstate.h  housesBuildingState.cpp  housesBuildingState.h  subjectbuildingproperty.cpp  subjectbuildingproperty.h
Monopoly/Common/: CMakeLists.txt  FsmVariant.h  Guest.h
Monopoly/GUI/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui
Monopoly/GUI/Board/: BoardView.cpp  BoardView.hpp  CMakeLists.txt  Field.hpp
Monopoly/GUI/Resources/: resources.qrc
Monopoly/GameElements/: Board.cpp  Board.h  CMakeLists.txt  CyclicIterator.h  Die.h
Monopoly/GameElements/Square/: BlackHole.cpp  BlackHole.h  Deposite.cpp  Deposite.h  District.cpp  District.h  Estate.cpp  Estate.h  GoToPrison.cpp  GoToPrison.h  Penalty.cpp  Penalty.h  Prison.cpp  Prison.h  Property.cpp  Property.h  PublicFacilities.cpp  PublicFacilities.h  RailwayStation.cpp  RailwayStation.h  RandomSquare.cpp  RandomSquare.h  Reward.cpp  Reward.h  Square.h  Start.cpp  Start.h
Monopoly/Player/: CMakeLists.txt  EventPlayer.h  Player.cpp  Player.h  PlayerFsm.cpp  PlayerFsm.h  PlayerPropertis.cpp  PlayerPropertis.h  State.h  StateActivePlayer.h  StateMachine.h  StatePlayer.h  StatePlayerBancrut.h  StatePlayerInPrison.h
Monopoly/Square/: HotelBuildingState.cpp  HotelBuildingState.h  allpropertisbuildingstate.cpp  allpropertisbuildingstate.h  blackhole.cpp  blackhole.h  buildingMachine.h  buildingproperty.cpp  buildingproperty.h  buildingstate.h  defultbuildingstate.cpp  defultbuildingstate.h  deposite.cpp  deposite.h  district.cpp  district.h  estate.cpp  estate.h  gotoprison.cpp  gotoprison.h  housedevelop.h  housesBuildingState.cpp  housesBuildingState.h  penalty.cpp  penalty.h  prison.cpp  prison.h  property.cpp  property.h  publicfacilities.cpp  publicfacilities.h  railwaystation.cpp  railwaystation.h  randomsquare.cpp  randomsquare.h  rentpaymode.h  reward.cpp  reward.h  square.h  start.cpp  (+3 more)
Tests/: BuildingPropertyFsmTestSuite.cpp  CMakeLists.txt  GoToPrisonTestSuite.cpp  PlayerTestSuite.cpp  PropertyModuleTestSuite.cpp  PropertyTestSuite.cpp  PublicFaciliiesTestSuite.cpp  RailwayStationTestSuite.cpp  gotoprisontestsuite.cpp  monopolytestmain.cpp  playerTestSuite.cpp  propertyTestSuite.cpp  publicfaciliiestestsuite.cpp  railwaystationtestsuite.cpp
Tests/Fixture/: CMakeLists.txt  MonopolyGameFixture.cpp  MonopolyGameFixture.h
Tests/Mocks/: CMakeLists.txt  DiceMock.h  DistrictMock.h  GuestMock.h  PlayerMock.h  dicemock.h  guestmock.h  playerMock.h
